--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "dev:tailwind-check": "pnpm dlx @tailwindcss/cli@latest -i ./app/styles/globals.css --eject-cli-cache --no-clear --watch",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
